[package]
name = "ftvf"
version = "0.5.0"
authors = ["Solra Bizna <solra@bizna.name>"]
edition = "2018"
license = "Zlib"
description = "Temporal logic for writing a Fixed Tickrate, Variable Framerate game in Rust."
repository = "https://github.com/SolraBizna/ftvf"
readme = "README.md"
keywords = ["gamedev", "time"]
maintenance = "passively-maintained"

[dependencies]
